--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.2.0"
+  },
+  "dependencies": {
+    "flux": "^3.1.3",
+    "webpack": "^3.4.1"
   }
 }
