--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "eventemitter3": "^2.0.3",
+    "events": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
