--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Burrito Ordering App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [
     "burrito"
@@ -31,8 +32,9 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
-    "express": "^4.15.3",
+    "express": "^4.15.4",
     "flux": "^3.1.3",
+    "mongoose": "^4.11.12",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   }
