--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "burrito-lounge",
   "version": "1.0.0",
   "description": "Burrito Ordering App",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon"
   },
   "keywords": [
     "burrito"
