--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.15.4",
     "flux": "^3.1.3",
     "mongoose": "^4.11.12",
+    "rethinkdb": "^2.3.3",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   }
