--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eventemitter3": "^2.0.3",
     "events": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "jquery": "^3.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "react": "^15.6.1",
@@ -32,6 +33,7 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.15.4",
     "flux": "^3.1.3",
     "mongoose": "^4.11.12",
