--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "EventEmitter": "^1.0.0",
+    "axios": "^0.17.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.26.0",
@@ -37,6 +38,7 @@
     "express": "^4.15.4",
     "flux": "^3.1.3",
     "mongoose": "^4.11.12",
+    "prop-types": "^15.6.0",
     "rethinkdb": "^2.3.3",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
